--- a/src/main/resources/com/example/chatrmi/ui/client/ClientInterface.fxml
+++ b/src/main/resources/com/example/chatrmi/ui/client/ClientInterface.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chatrmi.ui.client.ClientInterfaceController">
    <children>
       <fx:include layoutX="165.0" source="Chat.fxml" />
       <VBox alignment="TOP_CENTER" layoutY="45.0" prefHeight="351.0" prefWidth="165.0">
