--- a/src/main/resources/com/example/chatrmi/ui/client/Chat.fxml
+++ b/src/main/resources/com/example/chatrmi/ui/client/Chat.fxml
@@ -8,17 +8,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="285.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="285.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chatrmi.ui.client.ChatController">
    <children>
       <Button layoutX="248.0" layoutY="365.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="27.0" />
-      <TextField layoutX="10.0" layoutY="365.0" prefHeight="25.0" prefWidth="230.0" />
-      <VBox alignment="BOTTOM_CENTER" layoutY="10.0" prefHeight="340.0" prefWidth="285.0">
-         <children>
-            <fx:include source="Message.fxml" />
-         </children>
-      </VBox>
+      <TextField fx:id="messageField" layoutX="10.0" layoutY="365.0" prefHeight="25.0" prefWidth="230.0" />
+      <VBox fx:id="messagesContainer" alignment="BOTTOM_CENTER" layoutY="10.0" prefHeight="340.0" prefWidth="285.0" />
       <Separator layoutY="350.0" prefWidth="285.0" />
-      <ImageView fitHeight="26.0" fitWidth="26.0" layoutX="248.0" layoutY="364.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="sendButton" fitHeight="26.0" fitWidth="26.0" layoutX="248.0" layoutY="364.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@send-message.png" />
          </image></ImageView>
