--- a/src/main/resources/com/example/chatrmi/ui/client/Message.fxml
+++ b/src/main/resources/com/example/chatrmi/ui/client/Message.fxml
@@ -4,11 +4,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="285.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="35.0" prefWidth="285.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chatrmi.ui.client.MessageController">
    <children>
-      <Label layoutX="7.0" layoutY="15.0" prefHeight="16.0" prefWidth="252.0" text="Este es un mensaje de prueba" textAlignment="RIGHT" />
-      <Label layoutX="8.0" layoutY="1.0" prefHeight="14.0" prefWidth="252.0" text="Cliente 2">
+      <Label fx:id="message" layoutX="7.0" layoutY="15.0" prefHeight="16.0" prefWidth="271.0" text="Este es un mensaje de prueba" textAlignment="RIGHT" />
+      <Label fx:id="name" layoutX="8.0" layoutY="1.0" prefHeight="14.0" prefWidth="271.0" text="Cliente 2">
          <font>
             <Font size="10.0" />
          </font>
