--- a/src/main/resources/com/example/chatrmi/ui/client/Chat.fxml
+++ b/src/main/resources/com/example/chatrmi/ui/client/Chat.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="285.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chatrmi.ui.client.ChatController">
+<AnchorPane fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="285.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chatrmi.ui.client.ChatController">
    <children>
       <Button layoutX="248.0" layoutY="365.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="27.0" />
       <TextField fx:id="messageField" layoutX="10.0" layoutY="365.0" prefHeight="25.0" prefWidth="230.0" />
