--- a/src/main/resources/com/example/chatrmi/ui/client/ClientInterface.fxml
+++ b/src/main/resources/com/example/chatrmi/ui/client/ClientInterface.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
@@ -9,7 +11,14 @@
 
 <AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="450.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.chatrmi.ui.client.ClientInterfaceController">
    <children>
-      <VBox fx:id="indicatorContainer" alignment="TOP_CENTER" layoutY="45.0" prefHeight="351.0" prefWidth="165.0" />
+      <VBox fx:id="indicatorContainer" alignment="TOP_CENTER" layoutY="45.0" prefHeight="351.0" prefWidth="165.0">
+         <children>
+            <Button fx:id="newChatButton" mnemonicParsing="false" text="Nuevo chat">
+               <VBox.margin>
+                  <Insets top="10.0" />
+               </VBox.margin>
+            </Button>
+         </children></VBox>
       <Separator layoutX="164.0" orientation="VERTICAL" prefHeight="400.0" prefWidth="0.0" />
       <Separator layoutY="45.0" prefHeight="2.0" prefWidth="165.0" />
       <Label fx:id="nameLabel" layoutX="49.0" layoutY="15.0" prefHeight="16.0" prefWidth="107.0" text="Cliente 1" />
